--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Welcome to Index Page</h1>
-	<h2>Hello</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, incidunt placeat. Sunt est dolor eaque itaque, recusandae.</p>
+    <p>Contact</p>
     <script src="js/main.js"></script>
   </body>
 </html>
