--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <p>Contact</p>
+    <p>Contact Us</p>
     <script src="js/main.js"></script>
   </body>
 </html>
