--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Welcome to Index Page</h1>
 	<h2>Hello</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, incidunt placeat. Sunt est dolor eaque itaque, recusandae.</p>
+	<p>Ali</p>
     <script src="js/main.js"></script>
   </body>
 </html>
