add header to index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     <h1>Welcome to Index Page</h1>
 	<h2>Hello</h2>
+	<header>
+		Hi
+	<header>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, incidunt placeat. Sunt est dolor eaque itaque, recusandae.</p>
 	<p>Ali</p>
     <script src="js/main.js"></script>
