--- a/Shop.html
+++ b/Shop.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Welcome to Index Page</h1>
 	<h2>This is a Store</h2>
-    <p>This Store Many Of Object</p>
+    <p>This Store Many Of Object of Many Category</p>
     <script src="js/main.js"></script>
   </body>
 </html>
