Change Contact Page

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+	<a>Hello This is Link</a>
     <p>Contact Us</p>
     <script src="js/main.js"></script>
   </body>
