--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, incidunt placeat. Sunt est dolor eaque itaque, recusandae.</p>
 	<p>Ali</p>
     <script src="js/main.js"></script>
+	<footer>
+		Bye
+	<footer>
   </body>
 </html>
