--- a/Shop.html
+++ b/Shop.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Welcome to Index Page</h1>
+    <h1>Welcome to Store</h1>
 	<h2>This is a Store</h2>
     <p>This Store Many Of Object of Many Category</p>
     <script src="js/main.js"></script>
